--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@convex-dev/auth": "^0.0.80",
     "chart.js": "^4.4.9",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "1.21.1-alpha.1",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
@@ -23,7 +25,8 @@
     "react-swipeable": "^7.0.2",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.1.0"
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "overrides": {
     "convex": "1.21.1-alpha.1"
